# adspend-reconcile

./: .gitattributes  .gitignore  README.md  attribution_analyzer.py  budget_optimizer.py  causal_analyzer.py  ltv_cac_analyzer.py  mmm_analyzer.py  pyproject.toml  requirements.txt  roi_predictor.py
.github/workflows/: ci.yml
adspend_reconcile/: __init__.py  attribution.py  cli.py  ingest.py  metrics.py  reconcile.py  samples.py
sample_data/: google_ads_sample.csv  meta_ads_sample.csv  shopify_revenue_sample.csv  tiktok_ads_sample.csv
tests/: conftest.py  test_attribution.py  test_cli.py  test_ingest.py  test_metrics.py  test_reconcile.py
